# Tirocinium

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json  start-tirocinium.command  tsconfig.base.json
.github/workflows/: README.md  ci.yml  harness.yml  pages.yml
analytics-viewer/: index.html
apps/desktop/: .env.local.example  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.example.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  .env.local.example  package.json
backdoor-viewer/: index.html
companies-viewer/: data.js  index.html
data/: all-companies-names.json  all-companies-seed.json  companies-research.json  enrich-targets.json  honne-research.json  honne-seed.json  pilot10-research.json  pilot10-seed.json
data/companies/: listing-sources.json  news-sources.json  seeds.json
data/general/: README.md  designer.md  planner.md  programmer.md  reference-links.json  sound.md
data/training/: README.md
docs/: README.md  api.html  graph.html  index.html  interviewer-reproduction-impl.md  review.html
docs/assets/: api-data.js  graph-data.js  graph.js  style.css
es-requests-viewer/: index.html
newgrad-viewer/: data.js  index.html
ob-jobs-viewer/: index.html
review.localbak/: latest.json
review.localbak/2026-05-19/: REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  (+2 more)
scripts/: dev.mjs  newgrad-agent-helper.mjs
(+403 files in other folders)
