[package]
name = "tirocinium-desktop"
version = "0.0.1"
description = "Tirocinium desktop client"
edition = "2021"

[lib]
name = "tirocinium_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
